# vim-with-me

./: .config-example  .dockerignore  .env.example  .gitignore  .gitmodules  .luacheckrc  .luarc.json  .project.el  .stylua.toml  .ycm_extra_conf.py  CMakeLists.txt  Cargo.toml  ClaudeIsThatGood.md  Dockerfile  LICENSE.md  Makefile  NEXT-GEN.md  NOTICE.md  PROMPT  PROMPT_TEMPLATE  README.md  TODO.md  TOWER_DEFENSE.md  ai-vs-ai  ai.csv  ai_vs_ai  build.zig  build.zig.zon  bun.lockb  chat-fake.js  chat.js  cs3.5-vs-gpt4omini07  cs3.5-vs-gpt4omini07.csv  deploy  deploy-relay  docker-compose.yml  env  fly.toml  foo-debug.json  foo.json  (+25 more)
.github/workflows/: push-it-real-good.yml  runtests.yml
@types/: index.d.ts
chat_is_dumb/: .gitignore  Dockerfile  README.md  mix.exs
chat_is_dumb/config/: runtime.exs
chat_is_dumb/lib/: application.ex  chat_writes.ex  message_collector.ex  tcp_server.ex
chat_is_dumb/test/: chat_writes_test.exs  tcp_server_test.exs
cmd/: main.go
cmd/ai_test/: main.go
cmd/client/: main.go
cmd/empty/: main.go
cmd/particle/: main.go
cmd/server/: main.go
cmd/test/: client.html  main.go
cmd/test_render_server/: main.go
cmd/tower_defense/: main.go
cmd/web_front/: main.go
cmd/write_tcp/: main.go
data/: partial
deprecated/: chat.js  package.json
deprecated/cmd/: main.go
js/: app.js  assert.js  cmds.js  scratch.js  types.ts
js/bytes/: utils.js  writer.js
js/controller/: controller.js
js/decode/: frame.js  frame.test.js  index.js  types.ts
js/display/: canvas-render.js  window.js
js/net/: cache.js  frame.js
js/ws/: index.js
jsclient/: package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
jsclient/src/: index.ts
legal/: neovim.txt
lib/: irc.h  primepoints.h  sys-commands.h  twitch-irc.h  twitch-pubsub.h
lua/vim-with-me/: enum.lua  envelope.lua  init.lua  integration_spec.lua  location.lua  pobo.lua  statusline.lua  system.lua  tcp.lua  utils.lua
pkg/ansi_parser/: ansi.go  ansi_test.go  doom.go
pkg/ascii_buffer/: buffer.go  buffer_test.go  rle.go  virtual_box.go
pkg/assert/: assert.go
pkg/chat/: chat.go  chat_test.go  faker.go
pkg/commands/: commands.go
pkg/particles/: coffee.go  particles.go  particles_test.go
pkg/processors/: main.go  td.go  td_test.go
pkg/tcp/: compression.go  compression_test.go  connection.go  connection_test.go  server.go  tcp.go  tcp_test.go
pkg/tcp2/: connection.go  tcp.go
pkg/testies/: testies.go
pkg/tower_defense/: chat.go  chat_test.go  td.go  td_test.go  tower.go
pkg/utils/: utils.go
pkg/window/: colors.go  location.go  (+9 more)
prompt/: AI_MASTER_PROOMPTER  AI_MASTER_PROOMPTER_results_rand  AI_MASTER_PROOMPTER_results_rand_processed  AI_MASTER_PROOMPTER_results_rand_processed.csv  AI_MASTER_PROOMPTER_results_strat  AI_MASTER_PROOMPTER_results_strat_processed  AI_MASTER_PROOMPTER_results_strat_processed.csv  ENCOURAGEMENT  HAX  HAX_results_rand  HAX_results_rand_processed  HAX_results_rand_processed.csv  HAX_results_strat  HAX_results_strat_processed  HAX_results_strat_processed.csv  HOSTAGE  NAVY_SEAL  NAVY_SEAL_results_rand  NAVY_SEAL_results_rand_processed  NAVY_SEAL_results_rand_processed.csv  NAVY_SEAL_results_strat  NAVY_SEAL_results_strat_processed  NAVY_SEAL_results_strat_processed.csv  NETFLIX_BTW  NETFLIX_BTW_results_rand  NETFLIX_BTW_results_rand_processed  NETFLIX_BTW_results_rand_processed.csv  NETFLIX_BTW_results_strat  NETFLIX_BTW_results_strat_processed  NETFLIX_BTW_results_strat_processed.csv  PYTHONISTA  PYTHONISTA_results_rand  PYTHONISTA_results_rand_processed  PYTHONISTA_results_rand_processed.csv  PYTHONISTA_results_strat  PYTHONISTA_results_strat_processed  PYTHONISTA_results_strat_processed.csv  RICHARD  RICHARD_results_rand  RICHARD_results_rand_processed  (+36 more)
scripts/: client.lua  color.lua  manual_run.lua
src/: CMakeLists.txt  clap_me_daddy.rs  cmd.ts  debug.ts  env.ts  error.rs  events.rs  exec.rs  get-cost.ts  get-data.ts  get-type.ts  index.ts  lib.rs  main.zig  message-bus.ts  now.ts  opts.rs  params.zig  quirk.ts  should-send.ts  sim.zig  statusline.ts  tcp.ts  test.ts  twitchirc.c  util-functions.h  vim-with-me.c  vim-with-me.h.in  vim-with-me.ts  viz.zig
src/__tests__/: cmd.ts  simple-test.ts  tcp.ts
src/arduino/: mod.rs
src/assert/: assert.zig
src/client/: mod.rs  system.rs  vim.rs
src/command/: mod.rs
src/comms/: CMakeLists.txt  comms.c
src/encoding/: encoding.zig  rle.zig  xor.zig
src/engine/: ai.zig  canvas.zig  creep.zig  debug.zig  engine.zig  framer.zig  game-state.zig  input.zig  output.zig  primitives.zig  projectile.zig  render.zig  render_test.zig  renderable.zig  renderer.zig  report-state.zig  rounds.zig  stdout_output.zig  test.zig  time.zig  tower.zig  types.zig  update.zig  utils.zig
src/engine/input/: input.zig
src/engine/output/: framer.zig  output.zig  stdout_output.zig
src/hashmap/: CMakeLists.txt  hashmap.c  hashmap.h
src/irc/: CMakeLists.txt  index.ts  irc.c  prime-commands.ts
src/math/: math.zig
src/objects/: colors.zig  creep.zig  game-state.zig  messages.zig  no-build-zone.zig  objects.zig  projectile.zig  target.zig  tower.zig  types.zig  values.zig
src/pipe-line/: index.ts
src/points/: CMakeLists.txt  primepoints.c
src/prime/: message.rs  mod.rs  ws.rs
src/program-with-me/: index.ts
src/program-with-me/__tests__/: program-with-me.ts
src/quirk/: mod.rs
src/render/: render.zig  render_test.zig  renderable.zig
src/scratch/: scratch.zig
src/sim/: file.zig  rand.zig  sim.zig
src/system-commands/: :w  CMakeLists.txt  asdf.c  asdf.h  index.ts  sys-commands.c  sys-commands.h
src/system-commands/__tests__/: system-commands.ts
src/test/: game-state.zig  main.zig  params.zig  test.zig  utils.zig
src/twitch/: CMakeLists.txt  irc.c  pubsub.c  twitch.c  twitch.h
src/utils/: bus.ts
src/validation/: index.ts  prime-only.ts
src/vim-commands/: index.ts
src/vim-commands/__tests__/: vim-commands.ts
test/: ligma-from-thor-1
v2/: package-lock.json  package.json
v3/: fizzbuzz.ts  go.mod  go.sum  main.go  nvim.go
views/: index.html
vim/: test.vim
(+190 files in other folders)
