[package]
name = "vim-with-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.6", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }
tokio-tungstenite = "0.17.1"
url = "2.2.2"
