[package]
name = "vim-with-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.6", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
ipipe = "0.11.7"
log = "0.4.17"
num_enum = "0.5.7"
reqwest = { version = "0.11.11", features = ["json"] }
robust-arduino-serial = "0.1.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serial = "0.4.0"
systemstat = "0.1.11"
tokio = { version = "1.19.2", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
unix-named-pipe = "0.2.0"
url = "2.2.2"
